# multiservicios_kolizeras

./: .gitignore  client_supabase.py  conection.py  config.py  database.py  home.py  main.py  navigation.py  pago.py  pip  precio.py  pyproject.toml  requirements.txt  servicios.py  style.py  tabs.py  taller_app.py  tasa.py
UI/: cliente_ui.py  home.py  orden.py  orders.py  pago.py  registro_ui.py  servicios.py
assets/: pxgen_ai_case_study_icon.riv
logic/: registro_cliente.py
logica/: cargar_cliente.py  crear_cliente.py  editar_cliente.py  eliminar_cliente.py  logica_pago.py  manejo_cliente.py  manejo_ordenes.py  manejo_servicio.py
models/: cliente.py  cliente_model.py  servicio.py
ui/: cliente_ui.py  orders.py  registro_ui.py  servicios.py
utils/: utils.py
vistas/: view_cliente.py
